# New-snajeevani-backend

./: .gitignore  docker-compose.yml
RAG/Sanjeevani-RAG-/: test_rag.py
anvesha-chem/: Dockerfile  pyproject.toml  requirements.txt
anvesha-chem/app/: config.py  main.py
anvesha-chem/app/clients/: base.py  chembl_client.py  offline_client.py  pubchem_client.py  rag_client.py  surechembl_client.py
anvesha-chem/app/models/: extract.py  novelty.py
anvesha-chem/app/routers/: extract.py  health.py  novelty.py
anvesha-chem/app/services/: extraction_service.py  novelty_service.py
anvesha-chem/tests/: conftest.py  test_extraction.py  test_health.py  test_novelty.py
app/: Dockerfile  HELP.md  pom.xml
app/src/main/java/Sangeevani/app/: AppApplication.java
app/src/main/java/com/anvesha/core/: AnveshaApplication.java
app/src/main/java/com/anvesha/core/client/: PythonChemServiceClient.java  RagServiceClient.java
app/src/main/java/com/anvesha/core/config/: AsyncConfig.java  DataInitializer.java  OpenApiConfig.java  WebClientConfig.java
app/src/main/java/com/anvesha/core/controller/: AlertController.java  AuthController.java  DashboardController.java  DisclosureWindowController.java  InstitutionController.java  MoleculeController.java  PaperController.java
app/src/main/resources/: application.properties  application.yml
app/src/main/resources/db/migration/: V1__init.sql
app/src/test/java/Sangeevani/app/: AppApplicationTests.java
app/src/test/java/com/anvesha/core/: AuthIntegrationTest.java  PaperPipelineIntegrationTest.java
(+47 files in other folders)
