# anvesha-chem — Python FastAPI Chemistry Microservice
# Stateless internal service called by Spring Boot.
# Never exposes endpoints to the frontend directly.

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "anvesha-chem"
version = "1.0.0"
description = "Anvesha chemistry microservice — molecule extraction, structural novelty, patent screening"
requires-python = ">=3.11"

dependencies = [
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.32.0",
    "pydantic>=2.9.0",
    "pydantic-settings>=2.6.0",
    "httpx>=0.27.0",
    "tenacity>=9.0.0",
    "py2opsin>=1.2.0",
    "python-dotenv>=1.0.0",
    "python-multipart>=0.0.12",
]

[project.optional-dependencies]
test = [
    "pytest>=8.3.0",
    "pytest-asyncio>=0.24.0",
    "httpx>=0.27.0",
]

[tool.pytest.ini_options]
asyncio_mode = "auto"
